--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -1,7 +1,7 @@
 name:
   potoki-core
 version:
-  0.6
+  0.6.1
 synopsis:
   Low-level components of "potoki"
 description:
@@ -55,12 +55,13 @@ library
     text >=1 && <2,
     bytestring ==0.10.*,
     deque >=0.2 && <0.3,
+    unordered-containers >=0.2 && <0.3,
+    hashable >=1 && <2,
     -- 
     async >=2.1 && <3,
     unagi-chan >=0.4 && <0.5,
     -- 
     directory >=1.3 && <2,
-    unordered-containers >=0.2 && <0.3,
     foldl >=1.3 && <2,
     contravariant >=1.4 && <2,
     profunctors >=5.2 && <6,
