--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -1,7 +1,7 @@
 name:
   potoki-core
 version:
-  0.7
+  0.7.1
 synopsis:
   Low-level components of "potoki"
 description:
@@ -57,6 +57,7 @@ library
     deque >=0.2 && <0.3,
     unordered-containers >=0.2 && <0.3,
     hashable >=1 && <2,
+    vector >=0.11 && <0.13,
     -- 
     async >=2.1 && <3,
     unagi-chan >=0.4 && <0.5,
