--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -5,6 +5,8 @@ version:
 synopsis:
   Low-level components of "potoki"
 description:
+  Provides everything required for building custom instances of
+  the \"potoki\" abstractions.
   Consider this library to be the Internals modules of \"potoki\".
 category:
   Streaming
@@ -44,29 +46,40 @@ library
     Potoki.Core.Produce
     Potoki.Core.Fetch
     Potoki.Core.Consume
-    Potoki.Core.Transform
     Potoki.Core.IO
+    Potoki.Core.Transform
   other-modules:
     Potoki.Core.Prelude
   build-depends:
     -- 
-    attoparsec >=0.13 && <0.15,
-    -- 
-    text >=1 && <2,
-    bytestring ==0.10.*,
     deque >=0.2 && <0.3,
-    unordered-containers >=0.2 && <0.3,
-    hashable >=1 && <2,
-    vector >=0.11 && <0.13,
     -- 
-    async >=2.1 && <3,
-    unagi-chan >=0.4 && <0.5,
+    stm >=2.4 && <3,
     -- 
-    directory >=1.3 && <2,
-    foldl >=1.3 && <2,
-    contravariant >=1.4 && <2,
     profunctors >=5.2 && <6,
-    kan-extensions ==5.*,
     base-prelude <2,
     bug >=1 && <2,
     base >=4.7 && <5
+
+test-suite tests
+  type:
+    exitcode-stdio-1.0
+  hs-source-dirs:
+    tests
+  main-is:
+    Main.hs
+  default-extensions:
+    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+  default-language:
+    Haskell2010
+  build-depends:
+    -- 
+    potoki-core,
+    -- testing:
+    tasty >=0.12 && <0.13,
+    tasty-quickcheck >=0.9 && <0.10,
+    tasty-hunit >=0.9 && <0.10,
+    quickcheck-instances >=0.3.11 && <0.4,
+    QuickCheck >=2.8.1 && <3,
+    --
+    rerebase >=1.1 && <2
