--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -53,6 +53,7 @@ library
   build-depends:
     base >=4.7 && <5,
     deque >=0.2 && <0.3,
+    managed >=1.0.5 && <2,
     profunctors >=5.2 && <6,
     stm >=2.4 && <3
 
