Isolate the Transform Types and introduce "transform" in Consume and Produce

--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -49,6 +49,7 @@ library
     Potoki.Core.IO
     Potoki.Core.Transform
   other-modules:
+    Potoki.Core.Transform.Types
     Potoki.Core.Prelude
   build-depends:
     -- 
