--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -11,15 +11,15 @@ description:
 category:
   Streaming
 homepage:
-  https://github.com/nikita-volkov/potoki-core 
+  https://github.com/metrix-ai/potoki-core 
 bug-reports:
-  https://github.com/nikita-volkov/potoki-core/issues 
+  https://github.com/metrix-ai/potoki-core/issues 
 author:
   Nikita Volkov <nikita.y.volkov@mail.ru>
 maintainer:
-  Nikita Volkov <nikita.y.volkov@mail.ru>
+  Metrix.AI Tech Team <tech@metrix.ai>
 copyright:
-  (c) 2017, Nikita Volkov
+  (c) 2017, Metrix.AI
 license:
   MIT
 license-file:
@@ -33,7 +33,7 @@ source-repository head
   type:
     git
   location:
-    git://github.com/nikita-volkov/potoki-core.git
+    git://github.com/metrix-ai/potoki-core.git
 
 library
   hs-source-dirs:
