--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -49,7 +49,7 @@ library
     Potoki.Core.IO
     Potoki.Core.Transform
   other-modules:
-    Potoki.Core.Transform.Types
+    Potoki.Core.Types
     Potoki.Core.Prelude
   build-depends:
     base >=4.7 && <5,
@@ -74,7 +74,7 @@ test-suite tests
     -- testing:
     tasty >=0.12 && <0.13,
     tasty-quickcheck >=0.9 && <0.10,
-    tasty-hunit >=0.9 && <0.11,
+    tasty-hunit >=0.9 && <0.10,
     quickcheck-instances >=0.3.11 && <0.4,
     QuickCheck >=2.8.1 && <3,
     --
