--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -43,11 +43,11 @@ library
   default-language:
     Haskell2010
   exposed-modules:
-    Potoki.Core.Produce
+    -- Potoki.Core.Produce
     Potoki.Core.Fetch
-    Potoki.Core.Consume
-    Potoki.Core.IO
-    Potoki.Core.Transform
+    -- Potoki.Core.Consume
+    -- Potoki.Core.IO
+    -- Potoki.Core.Transform
   other-modules:
     Potoki.Core.Types
     Potoki.Core.Prelude
@@ -57,25 +57,25 @@ library
     profunctors >=5.2 && <6,
     stm >=2.4 && <3
 
-test-suite tests
-  type:
-    exitcode-stdio-1.0
-  hs-source-dirs:
-    tests
-  main-is:
-    Main.hs
-  default-extensions:
-    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
-  default-language:
-    Haskell2010
-  build-depends:
-    -- 
-    potoki-core,
-    -- testing:
-    tasty >=0.12 && <0.13,
-    tasty-quickcheck >=0.9 && <0.10,
-    tasty-hunit >=0.9 && <0.10,
-    quickcheck-instances >=0.3.11 && <0.4,
-    QuickCheck >=2.8.1 && <3,
-    --
-    rerebase >=1.1 && <2
+-- test-suite tests
+--   type:
+--     exitcode-stdio-1.0
+--   hs-source-dirs:
+--     tests
+--   main-is:
+--     Main.hs
+--   default-extensions:
+--     Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+--   default-language:
+--     Haskell2010
+--   build-depends:
+--     -- 
+--     potoki-core,
+--     -- testing:
+--     tasty >=0.12 && <0.13,
+--     tasty-quickcheck >=0.9 && <0.10,
+--     tasty-hunit >=0.9 && <0.10,
+--     quickcheck-instances >=0.3.11 && <0.4,
+--     QuickCheck >=2.8.1 && <3,
+--     --
+--     rerebase >=1.1 && <2
