--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -47,7 +47,7 @@ library
     Potoki.Core.Fetch
     Potoki.Core.Consume
     Potoki.Core.IO
---    Potoki.Core.Transform
+    Potoki.Core.Transform
   other-modules:
     Potoki.Core.Types
     Potoki.Core.Prelude
