--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -54,6 +54,7 @@ library
   build-depends:
     -- 
     stm >=2.4 && <3,
+    bytestring >=0.10 && <0.11,
     -- 
     profunctors >=5.2 && <6,
     base >=4.7 && <5
