--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -51,11 +51,31 @@ library
   other-modules:
     Potoki.Core.Types
     Potoki.Core.Prelude
+    Potoki.Core.Transform.Attoparsec
+    Potoki.Core.Transform.Basic
+    Potoki.Core.Transform.ByteString
+    Potoki.Core.Transform.Concurrency
+    Potoki.Core.Transform.FileIO
+    Potoki.Core.Transform.State
+    Potoki.Core.Transform.Instances
+    Potoki.Core.IO.Fetch
   build-depends:
     acquire >=0.2 && <0.3,
     base >=4.7 && <5,
     profunctors >=5.2 && <6,
-    stm >=2.4 && <3
+    stm >=2.4 && <3,
+    attoparsec >=0.13 && <0.15,
+    base-prelude <2,
+    bytestring ==0.10.*,
+    directory >=1.3 && <2,
+    foldl >=1.3 && <2,
+    hashable >=1 && <2,
+    ptr >=0.16.2 && <0.17,
+    text >=1 && <2,
+    transformers >=0.5 && <0.6,
+    unagi-chan >=0.4 && <0.5,
+    unordered-containers >=0.2 && <0.3,
+    vector >=0.12 && <0.13
 
 test-suite tests
   type:
@@ -72,10 +92,12 @@ test-suite tests
     -- 
     potoki-core,
     -- testing:
+    attoparsec,
     tasty >=0.12 && <0.13,
     tasty-quickcheck >=0.9 && <0.10,
     tasty-hunit >=0.9 && <0.10,
     quickcheck-instances >=0.3.11 && <0.4,
     QuickCheck >=2.8.1 && <3,
+    random >=1.1 && <2,
     --
     rerebase >=1.1 && <2
