--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -96,6 +96,7 @@ test-suite tests
     potoki-core,
     -- testing:
     attoparsec,
+    acquire >=0.2 && <0.3,
     tasty >=1.0.1 && <1.2,
     tasty-quickcheck >=0.10 && <0.11,
     tasty-hunit >=0.10 && <0.11,
