--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -11,9 +11,9 @@ description:
 category:
   Streaming
 homepage:
-  https://github.com/metrix-ai/potoki-core 
+  https://github.com/metrix-ai/potoki-core
 bug-reports:
-  https://github.com/metrix-ai/potoki-core/issues 
+  https://github.com/metrix-ai/potoki-core/issues
 author:
   Nikita Volkov <nikita.y.volkov@mail.ru>
 maintainer:
@@ -52,10 +52,11 @@ library
     Potoki.Core.Transform.Types
     Potoki.Core.Prelude
   build-depends:
-    -- 
+    --
     stm >=2.4 && <3,
     bytestring >=0.10 && <0.11,
-    -- 
+    --
+    foldl >=1.3.7 && <1.5,
     profunctors >=5.2 && <6,
     base >=4.7 && <5
 
@@ -71,7 +72,7 @@ test-suite tests
   default-language:
     Haskell2010
   build-depends:
-    -- 
+    --
     potoki-core,
     -- testing:
     tasty >=0.12 && <0.13,
@@ -81,3 +82,42 @@ test-suite tests
     QuickCheck >=2.8.1 && <3,
     --
     rerebase >=1.1 && <2
+
+benchmark benchmark
+  type:
+    exitcode-stdio-1.0
+  hs-source-dirs:
+    benchmarks
+  main-is:
+    Main.hs
+  other-modules:
+    Tests.Choice
+    Tests.Strong
+    Tests.Transform
+  default-extensions:
+    Arrows, BangPatterns, ConstraintKinds, DataKinds, InstanceSigs,
+    DefaultSignatures, DeriveDataTypeable, DeriveFoldable,
+    DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls,
+    FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs,
+    GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms,
+    MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude,
+    NoMonomorphismRestriction, OverloadedStrings, PatternGuards,
+    ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards,
+    ScopedTypeVariables, StandaloneDeriving, TemplateHaskell,
+    TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+  default-language:
+    Haskell2010
+  build-depends:
+    --
+    potoki-core,
+    -- benchmark:
+    foldl >=1.3.7 && <1.5,
+    rerebase >=1.2.2 && <1.3,
+    gauge >=0.2.1 && <0.2.4,
+    weigh >=0.0.12 && <0.1
+  ghc-options:
+    -Wall
+    -O2
+    -threaded
+    "-with-rtsopts=-N"
+    -funbox-strict-fields
