--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -60,6 +60,7 @@ library
     base >=4.7 && <5,
     bytestring ==0.10.*,
     contravariant >=1.4 && <2,
+    deferred-folds >=0.5.1 && <0.6,
     directory >=1.3 && <2,
     foldl >=1.3 && <2,
     hashable >=1 && <2,
