--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -118,6 +118,7 @@ benchmark benchmark
     Tests.Choice
     Tests.Strong
     Tests.Transform
+    Tests.Consume
   default-extensions:
     Arrows, BangPatterns, ConstraintKinds, DataKinds, InstanceSigs,
     DefaultSignatures, DeriveDataTypeable, DeriveFoldable,
