--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -51,6 +51,7 @@ library
     base >=4.9 && <5,
     bytestring ==0.10.*,
     deepseq >=1.4.3 && <2,
+    deferred-folds >=0.9.7.1 && <0.10,
     directory >=1.3 && <2,
     foldl >=1.3 && <2,
     hashable >=1 && <2,
@@ -79,6 +80,7 @@ test-suite test
   build-depends:
     acquire >=0.2 && <0.3,
     attoparsec,
+    deferred-folds,
     foldl >=1.3.7 && <2,
     ilist >=0.3.1.0 && <0.4,
     split >=0.2.3.3 && <0.3,
