--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ env:
   - ghc=8.4.2  cabal=2.4 benchmarks=1 tests=1
   - ghc=8.6.1  cabal=2.4
 
+matrix:
+  allow_failures:
+  - env: ghc=8.6.1 cabal=2.4
+
 install:
   # Set up the Shell to treat the semicolon as &&
   - set -o pipefail && set -e
