--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 env:
-  - ghc=8.0.2  cabal=2.4
-  - ghc=8.2.2  cabal=2.4
-  - ghc=8.4.2  cabal=2.4 benchmarks=1 tests=1
-  - ghc=8.6.1  cabal=2.4
+  - ghc=8.0.2
+  - ghc=8.2.2
+  - ghc=8.4.2 benchmarks=1 tests=1
+  - ghc=8.6.1
 
 matrix:
   allow_failures:
-  - env: ghc=8.6.1 cabal=2.4
+  - env: ghc=8.6.1
 
 install:
   # Set up the Shell to treat the semicolon as &&
   - set -o pipefail && set -e
   # Install GHC and Cabal
   -
+    cabal=${cabal=2.4};
     travis_retry sudo add-apt-repository -y ppa:hvr/ghc;
     travis_retry sudo apt-get update;
     travis_retry sudo apt-get install cabal-install-$cabal ghc-$ghc;
