--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -15,6 +15,8 @@ license: MIT
 license-file: LICENSE
 build-type: Simple
 cabal-version: >=1.10
+tested-with: GHC ==8.4.2, GHC ==8.6.*
+
 
 source-repository head
   type: git
