--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -51,6 +51,7 @@ library
     directory >=1.3 && <2,
     foldl >=1.3 && <2,
     hashable >=1 && <2,
+    primitive >=0.6.4 && <0.7,
     profunctors >=5.2 && <6,
     ptr >=0.16.2 && <0.17,
     stm >=2.4 && <3,
