--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -46,7 +46,7 @@ library
     Potoki.Core.Produce
     Potoki.Core.ProduceConcurrently
     Potoki.Core.ProduceSequentially
-    Potoki.Core.Consume
+    Potoki.Core.EatOne
     Potoki.Core.Transduce
     Potoki.Core.TransduceConcurrently
     Potoki.Core.Reduce
