--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -58,6 +58,7 @@ library
     scanner >=0.3 && <0.4,
     stm >=2.4 && <3,
     text >=1 && <2,
+    time >=1.5 && <2,
     transformers >=0.5 && <0.6,
     unordered-containers >=0.2 && <0.3,
     vector >=0.12 && <0.13
