Add "extractLines" benchmark

--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -85,3 +85,15 @@ test-suite test
     tasty >=1.0.1 && <1.2,
     tasty-hunit >=0.10 && <0.11,
     tasty-quickcheck >=0.10 && <0.11
+
+benchmark benchmark
+  type: exitcode-stdio-1.0
+  hs-source-dirs: benchmark
+  default-extensions: Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+  default-language: Haskell2010
+  ghc-options: -O2 -threaded "-with-rtsopts=-N -A64M"
+  main-is: Main.hs
+  build-depends:
+    criterion >=1.5.1 && <2,
+    potoki-core,
+    rerebase >=1 && <2
