--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -60,6 +60,7 @@ library
     text >=1 && <2,
     time >=1.5 && <2,
     transformers >=0.5 && <0.6,
+    unagi-chan >=0.4.1 && <0.5,
     unordered-containers >=0.2 && <0.3,
     vector >=0.12 && <0.13
 
