--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -77,6 +77,7 @@ test-suite test
     attoparsec,
     foldl >=1.3.7 && <1.4,
     ilist >=0.3.1.0 && <0.4,
+    split >=0.2.3.3 && <0.3,
     potoki-core,
     QuickCheck >=2.8.1 && <3,
     quickcheck-instances >=0.3.11 && <0.4,
