--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -97,7 +97,7 @@ benchmark benchmark
     Tests.Strong
     Tests.Transduce
     Tests.Reduce
-    -- Tests.Produce
+    Tests.Produce
   default-extensions:
     Arrows, BangPatterns, ConstraintKinds, DataKinds, InstanceSigs,
     DefaultSignatures, DeriveDataTypeable, DeriveFoldable,
