--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -49,6 +49,7 @@ library
     attoparsec >=0.13 && <0.15,
     base >=4.9 && <5,
     bytestring ==0.10.*,
+    deepseq >=1.4.3 && <2,
     directory >=1.3 && <2,
     foldl >=1.3 && <2,
     hashable >=1 && <2,
