--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -33,6 +33,7 @@ library
     Potoki.Core.IO
     Potoki.Core.Transform
   other-modules:
+    Potoki.Core.TextBuilder
     Potoki.Core.Types
     Potoki.Core.Prelude
     Potoki.Core.Transform.Attoparsec
@@ -59,6 +60,7 @@ library
     scanner >=0.3 && <0.4,
     stm >=2.4 && <3,
     text >=1 && <2,
+    text-builder >=0.6.3 && <0.7,
     time >=1.5 && <2,
     transformers >=0.5 && <0.6,
     unordered-containers >=0.2 && <0.3,
