--- a/potoki-core.cabal
+++ b/potoki-core.cabal
@@ -60,6 +60,7 @@ library
     ptr >=0.16.2 && <0.17,
     scanner >=0.3 && <0.4,
     stm >=2.5 && <2.6,
+    stm-chans >=3 && <3.1,
     text >=1 && <2,
     text-builder >=0.6.3 && <0.7,
     time >=1.5 && <2,
